// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemHeadline should match snapshot with subheadline 1`] = `
<h3
  className="css-m4ovun-StyledHeader e10thz6k2"
>
  <span
    className="css-1oipe6n-StyledHeadline e10thz6k0"
  >
    headline
  </span>
</h3>
`;

exports[`ItemHeadline should match snapshot with subheadline and classNames 1`] = `
<h3
  className="class css-m4ovun-StyledHeader e10thz6k2"
>
  <span
    className="css-1oipe6n-StyledHeadline e10thz6k0"
  >
    headline
  </span>
</h3>
`;

exports[`ItemHeadline should match snapshot without subheadline 1`] = `
<h3
  className="css-m4ovun-StyledHeader e10thz6k2"
>
  <span
    className="css-1oipe6n-StyledHeadline e10thz6k0"
  >
    headline
  </span>
</h3>
`;
